--- a/public/webapp/index.html
+++ b/public/webapp/index.html
@@ -29,7 +29,11 @@
   <!--Services-->
   <script src="service/dal/dal.js"></script>
   <script src="service/dal/food.js"></script>
+  <script src="service/dal/symptom.js"></script>
+  <script src="service/dal/treatment.js"></script>
   <script src="service/repository/food.js"></script>
+  <script src="service/repository/symptom.js"></script>
+  <script src="service/repository/treatment.js"></script>
 
   <!--Features-->
   <script src="feature/login/login-controller.js"></script>
@@ -45,6 +49,17 @@
   <script src="feature/food/food-item-controller.js"></script>
   <script src="feature/food/food-form-controller.js"></script>
   <link rel="stylesheet/less" href="feature/food/food.less" type="text/css"/>
+
+  <script src="feature/symptom/symptom-controller.js"></script>
+  <script src="feature/symptom/symptom-item-controller.js"></script>
+  <script src="feature/symptom/symptom-form-controller.js"></script>
+  <link rel="stylesheet/less" href="feature/symptom/symptom.less" type="text/css"/>
+
+  <script src="feature/information/information-controller.js"></script>
+  <link rel="stylesheet/less" href="feature/information/information.less" type="text/css"/>
+
+  <script src="feature/assistance/assistance-controller.js"></script>
+  <link rel="stylesheet/less" href="feature/assistance/assistance.less" type="text/css"/>
 
   <!--LESS pre-processor - needs to be last -->
   <script src="lib/less/less.min.js"></script>
