Adding treatments, symptoms, information and assistance

--- a/public/webapp/index.html
+++ b/public/webapp/index.html
@@ -55,6 +55,11 @@
   <script src="feature/symptom/symptom-form-controller.js"></script>
   <link rel="stylesheet/less" href="feature/symptom/symptom.less" type="text/css"/>
 
+  <script src="feature/treatment/treatment-controller.js"></script>
+  <script src="feature/treatment/treatment-item-controller.js"></script>
+  <script src="feature/treatment/treatment-form-controller.js"></script>
+  <link rel="stylesheet/less" href="feature/treatment/treatment.less" type="text/css"/>
+
   <script src="feature/information/information-controller.js"></script>
   <link rel="stylesheet/less" href="feature/information/information.less" type="text/css"/>
 
